--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
-<html>
-<head>
-</head>
-<body>
-Min första News app!
-</body>
+<!doctype html>
+<html lang="en">
+    <head></head>
+    <body>
+        <h1>Deaths during the L.A. riots</h1>
+    </body>
 </html>
