--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,11 +1,27 @@
 <!doctype html>
 <html lang="en">
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+        <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script></head>
     <body>
+        <div id="map" style="width:100%; height:400px;"></div>
 		<h1>{{ object.full_name }}</h1>
 		<p>
-            {{ object.full_name }}, en {{ object.age }}-&aring;rig {{ object.race|lower }} {{ object.gender|lower }}
-			dog den {{ object.date }} p&aring; {{ object.address }}. <br>D&ouml;dsorsak: av {{ object.type }}.
+            {{ object.full_name }}, en {{ object.age }}-&aring;rig {{ object.raceforma }} {{ object.gender|lower }}
+			dog den {{ object.date }} p&aring; {{ object.address }}, {{ object.neighborhood }}.</p>
+			<p><b>D&ouml;dsorsak:</b>{{ object.type }}.</p><
+			<p><a href ="{{ object.url }}">Läs mer</a>
 		</p>
-    </body>
+
+		<script type="text/javascript">
+				var map = L.map('map').setView([34.055, -118.35], 10);
+				var mapquestLayer = new L.TileLayer('http://{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.png', {
+					maxZoom: 18,
+					attribution: 'Data, imagery and map information provided by <a href="http://open.mapquest.co.uk" target="_blank">MapQuest</a>,<a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> and contributors.',
+					subdomains: ['otile1','otile2','otile3','otile4']
+				});
+            map.addLayer(mapquestLayer);
+            var marker = L.marker([{{ object.y }}, {{ object.x }}]).addTo(map);
+        </script>
+   </body>
 </html>
