--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html lang="en">
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+        <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+   </head>
     <body>
+         <div id="map" style="width:100%; height:500px;"></div>
         <h1>D&ouml;da under upploppen i L.A. 1992</h1>
         <table border=0 cellpadding=4 >
             <tr>
@@ -25,5 +29,45 @@
             </tr>
         {% endfor %}
         </table>
+        <script type="text/javascript">
+            var map = L.map('map').setView([34.055, -118.35], 10);
+            var mapquestLayer = new L.TileLayer('http://{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.png', {
+                maxZoom: 18,
+                attribution: 'Data, imagery and map information provided by <a href="http://open.mapquest.co.uk" target="_blank">MapQuest</a>,<a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> and contributors.',
+                subdomains: ['otile1','otile2','otile3','otile4']
+            });
+            map.addLayer(mapquestLayer);
+			            var data = {
+              "type": "FeatureCollection",
+              "features": [
+                {% for obj in object_list %}
+                {
+                  "type": "Feature",
+                  "properties": {
+                    "full_name": "{{ obj.full_name }}",
+                    "id": "{{ obj.id }}",
+                    "gender": "{{ obj.gender }}",
+                    "age": "{{ obj.age }}",
+                    "date": "{{ obj.date }}"
+                  },
+                  "geometry": {
+                    "type": "Point",
+                    "coordinates": [{{ obj.x }}, {{ obj.y }}]
+                  }
+                }{% if not loop.last %},{% endif %}
+                {% endfor %}
+              ]
+            };
+            var dataLayer = L.geoJson(data, {
+                onEachFeature: function(feature, layer) {
+                    layer.bindPopup(
+                        '<a href="' + feature.properties.id + '/">' +
+                            feature.properties.full_name +
+                        '</a><br>' + feature.properties.gender + ', ' +feature.properties.age + ' years<br>' + feature.properties.date  
+                    );
+                }
+            });
+            map.addLayer(dataLayer);
+        </script>
     </body>
 </html>
